<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favorite</string>
    <string name="home">home</string>
    <string name="rating">rating</string>
    <string name="content">film content</string>
    <string name="title">Title</string>
    <string name="hello">hello</string>
    <string name="tools_content">После теракта в киевском оперном театре агент ЦРУ объединяется с британской разведкой, чтобы противостоять русскому олигарху, который сколотил состояние на торговле оружием.</string>
    <string name="list_title">Movies list</string>
    <string name="movie_info">Movie Info</string>
    <string name="fab_clicked">Floating Action Button clicked</string>
    <string name="movie">Movie</string>
    <string name="release_date">Дата выхода:</string>
    <string name="history_fragment">History</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="add_your_note">Add your note</string>
    <string name="set_your_note">Set your note</string>
    <string name="contacts">Contacts</string>
    <string name="clear_history">Do you wanna clear history?</string>
    <string name="map">Map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="find_my_loc">Find my location</string>
</resources>