<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:menu="@menu/map_menu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/map" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            app:layout_constraintEnd_toStartOf="@+id/longitude_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitude_input"
                android:inputType="numberDecimal"
                android:layout_margin="@dimen/small_default_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_default_margin"
            android:hint="@string/longitude"
            app:layout_constraintBottom_toBottomOf="@+id/latitude_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/latitude_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitude_input"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude_layout"
            tools:context=".ui.map.MapsFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>